# hmg-utils

./: .gitignore  Cargo.toml  README.md
src/: hmgen.rs  hmgrep.rs
src/greplib/: mod.rs
src/hmglib/: README.md  cartesian.rs  common.rs  homoglyph.rs  mod.rs
src/hmglib/cjk/: jpn.rs  mod.rs  width.rs
src/hmglib/files/: chars.txt  generate_homoglyph.py  homoglyph.json  original_char_codes.txt  original_chars.txt
